bitfield/tests/04-multiple-of-8bits.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^
   |
   = note: source type: `()` (0 bits)
   = note: target type: `[u8; 7]` (56 bits)
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
